force-app/main/default/objects/Product2/Product2.object-meta.xml
<CustomObject>
</CustomObject>