force-app/main/default/objects/Product2/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apple Pie</fullName>
            </value>
            <value>
                <fullName>Cheeseburger</fullName>
            </value>
            <value>
                <fullName>Chicken Nuggets</fullName>
            </value>
            <value>
                <fullName>Chicken Sandwich</fullName>
            </value>
            <value>
                <fullName>Coffee</fullName>
            </value>
            <value>
                <fullName>Cookies</fullName>
            </value>
            <value>
                <fullName>Double Cheeseburger</fullName>
            </value>
            <value>
                <fullName>Fish Filet</fullName>
            </value>
            <value>
                <fullName>French Fries</fullName>
            </value>
            <value>
                <fullName>Ice Cream Cone</fullName>
            </value>
            <value>
                <fullName>Juice</fullName>
            </value>
            <value>
                <fullName>Milkshake</fullName>
            </value>
            <value>
                <fullName>Salad</fullName>
            </value>
            <value>
                <fullName>Smoothie</fullName>
            </value>
            <value>
                <fullName>Soda</fullName>
            </value>
            <value>
                <fullName>Spicy Chicken Sandwich</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>