force-app/main/default/objects/Product2/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <label>Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Desserts</fullName>
                <default>true</default>
                <label>Desserts</label>
            </value>
            <value>
                <fullName>Drink</fullName>
            </value>
            <value>
                <fullName>Sandwiches</fullName>
            </value>
            <value>
                <fullName>Sides</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>