force-app/main/default/objects/Product2/fields/ProductCost__c.field-meta.xml
<CustomField>
    <fullName>ProductCost__c</fullName>
    <label>Cost</label>
    <precision>7</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>