force-app/main/default/objects/Product2/fields/ProductID__c.field-meta.xml
<CustomField>
    <fullName>ProductID__c</fullName>
    <displayFormat>Item#{000}</displayFormat>
    <label>Product ID</label>
    <type>AutoNumber</type>
</CustomField>