force-app/main/default/objects/Product2/fields/Supply_Item__c.field-meta.xml
<CustomField>
    <fullName>Supply_Item__c</fullName>
    <label>Supply Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beef</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
            <value>
                <fullName>Potato</fullName>
            </value>
            <value>
                <fullName>Apple</fullName>
            </value>
            <value>
                <fullName>Lettuce</fullName>
            </value>
            <value>
                <fullName>Coffee Beans</fullName>
            </value>
            <value>
                <fullName>Dairy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>