force-app/main/default/objects/Product2/recordTypes/Menu_Item.recordType-meta.xml
<RecordType>
    <fullName>Menu_Item</fullName>
    <active>true</active>
    <label>Menu Item</label>
</RecordType>