force-app/main/default/objects/Product2/recordTypes/Supply_Items.recordType-meta.xml
<RecordType>
    <fullName>Supply_Items</fullName>
    <active>true</active>
    <label>Supply Items</label>
</RecordType>