force-app/main/default/objects/Product2/listViews/SupplyItems.listView-meta.xml
<ListView>
    <fullName>SupplyItems</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>ProductCost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.RECORD_TYPE</field>
        <operation>equals</operation>
        <value>Product2.Supply_Items</value>
    </filters>
    <label>Supply Items</label>
    <sharedTo>
        <group>List_Views</group>
    </sharedTo>
</ListView>